# Hillel_PRO

./: .gitignore  logs.json  test.txt
.github/workflows/: ci.yml
Hillel_PRO/Django_2/src/config/: urls.py
Hillel_PRO/Django_2/src/issues/: api.py
Hillel_PRO/Django_3_serializers/src/config/: urls.py
Hillel_PRO/Django_6 Custom User Model /src/config/: urls.py
Hillel_PRO/Django_8 permissions/src/issues/: api.py
Hillel_PRO/Lesson_1/: Lesson_1.py
Hillel_PRO/Lesson_10/: currency_prep_api.py  logs.json  main.py  requests.http  requests_playgroud.py  test.py
Hillel_PRO/Lesson_11/: abstracts.py  abstracts2.py  api.py  home_work.py  models.py  payment_system.py  payment_system_OLD.py  test.py
Hillel_PRO/Lesson_12/: encrypt_decrypt.py  homework.py  threads.py
Hillel_PRO/Lesson_13/: lesson.py  lesson_async.py  lesson_threads.py  requests.http  test.py  test1.py  test2.py  test3.py  test4.py
Hillel_PRO/Lesson_14/: lesson_14.py
Hillel_PRO/Lesson_15/: index.html  server.py  test.py
Hillel_PRO/Lesson_3/: main.py
Hillel_PRO/Lesson_4/: decorators.py  main.py
Hillel_PRO/Lesson_5/: Lesson_5_task_1.py  MRO_test.py  OOP_test.py  item.py  phone.py  test.txt
Hillel_PRO/Lesson_6/: Lesson_6_task_1  generator_test.py  lesson_6_task_1.py
Hillel_PRO/Lesson_7/: lesson_7_task_1.py  test.py
Hillel_PRO/Lesson_7/HW/: lesson_7_task_1.py  test.py
Hillel_PRO/Lesson_8/: database.py  database_improved.py  lesson_8_task_1.py  team_improved.py  test.py
Hillel_PRO/Lesson_9/: lesson_9_task_1.py  vectors.py
first/: pyproject.toml
(+12 files in other folders)
